fix most urgent navbar issue on mobile

--- a/_sass/theme/_floatingHero.sass
+++ b/_sass/theme/_floatingHero.sass
@@ -60,3 +60,5 @@
   .floatingHero
     .feature-title
       font-size: 2rem
+    .feature-description
+      font-size: 100%
