--- a/_sass/theme/_navbar.sass
+++ b/_sass/theme/_navbar.sass
@@ -7,21 +7,26 @@
 
 .navbar
   box-shadow: 0px 2px 8px rgba(0,0,0, .1)
-  &--floating
-    position: absolute
-    width: 100%
-  &--hasWhiteText
-    .navbar_logo-text
-      color: white
-    .navbar-start
-      .navbar-link:not(.is-arrowless)::after
-        border-color: white
-      >.navbar-item, .navbar-link
-        color: white
-      .has-dropdown 
-        color: white
+
+@media screen and (max-width: 1024px)
+  .navbar
+    background: $navbar-background-color!important
 
 @media screen and (min-width: 1024px)
+  .navbar
+    &--floating
+      position: absolute
+      width: 100%
+    &--hasWhiteText
+      .navbar_logo-text
+        color: white
+      .navbar-start
+        .navbar-link:not(.is-arrowless)::after
+          border-color: white
+        >.navbar-item, .navbar-link
+          color: white
+        .has-dropdown 
+          color: white
   .navbar--hasWhiteText
     //a.navbar-item:focus, a.navbar-item:focus-within, a.navbar-item:hover, a.navbar-item.is-active, .navbar-link:focus, .navbar-link:focus-within, .navbar-link:hover, .navbar-link.is-active, .navbar-item.has-dropdown:focus .navbar-link, .navbar-item.has-dropdown:hover .navbar-link, .navbar-item.has-dropdown.is-active .navbar-link
     .navbar-top-item:hover
